# Anti-Lagg-Board

Firmware/: CMakeLists.txt  README.md
Firmware/src/: main.c  tusb_config.h  usb_descriptors.c
Firmware/src/encoder/: encoder.c  encoder.h
Firmware/src/keyboard/: keyboard.c  keyboard.h  usb_descriptors.h
Firmware/src/oled/: oled.c  oled.h
Firmware/tinyusb-master/src/: tusb_option.h
Firmware/tinyusb-master/src/class/hid/: hid.h  hid_device.c  hid_device.h
Firmware/tinyusb-master/src/device/: usbd.c
PCB/Numpad/: Screen.lib  fp-info-cache  keyboard-cache.lib  keyboard.kicad_pcb  keyboard.kicad_pcb-bak  keyboard.pro  keyboard.sch  keyboard.sch-bak
PCB/Numpad/Gerbers/: keyboard-B_Cu.gbl  keyboard-B_Mask.gbs  keyboard-B_Paste.gbp  keyboard-B_SilkS.gbo  keyboard-Edge_Cuts.gm1  keyboard-F_Cu.gtl  keyboard-F_Mask.gts  keyboard-F_Paste.gtp  keyboard-F_SilkS.gto  keyboard-NPTH.drl  keyboard-PTH.drl
PCB/Numpad/Screen.pretty/: 0.91_i2c_oled.kicad_mod
Plate/Numpad/: Gasket Numpad V1.1.dxf
